--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
 </button>
 <h2 class="display-2 mb-sm">
     <strong>
-        sini-module
+        modulo
     </strong>
 </h2>
 <div class="container-wco">
